<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication">

    <EditText
        android:id="@+id/email_edit_txt"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:textSize="23sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.496"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.236"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_edit_txt"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@+id/email_edit_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textSize="23sp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.496"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/email_edit_txt"
        ads:layout_constraintVertical_bias="0.004"
        android:autofillHints="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:text="@string/authorization"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_txt"/>

    <Button
        android:id="@+id/registration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:text="@string/registration"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.505"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        ads:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>